Try to fix layout bug in post-details

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -45,7 +45,7 @@ body {
     position: absolute;
     right: 250px;
     width: 0;
-    height: 100%;
+    height: 80%;
     margin-right: -250px;
     overflow-y: auto;
     background: #F9FAFC;
@@ -101,6 +101,10 @@ body {
     background-color: transparent;
 }
 
+.card-body {
+    display: inline-block;
+}
+
 .image-container {
     position: relative;
 }
@@ -121,7 +125,7 @@ body {
     font-family: 'Plus Jakarta Sans', sans-serif;
 }
 
-/* Content */
+/* Post Content */
 
 .masthead {
     margin-top: 0px;
@@ -130,6 +134,7 @@ body {
     display: inline-block;
     height: 25vh;
     width: 100%;
+    margin: 0;
 }
 
 .masthead-text {
@@ -137,22 +142,21 @@ body {
     position: relative;
 }
 
-.restaurant_detail, .address-detail {
-    color: #000;
-    font-size: 15px;
-    margin-left: 5%;
+.recipe-detail-card {
+    border: 0.5 solid red;
 }
 
-.masthead-image {
-    position: relative;
-    overflow: hidden;
+.recipe-detail-img {
+    max-height: 300px;
+    object-fit: cover;
+    width: 100%;
 }
 
 
 
-.price {
-    font-size: 20px;
-}
+
+
+
 
 .post-link {
     text-decoration: none;
